Check if output folder exists / ask to create

--- a/EmuELEC-GameProgressBackup.csproj
+++ b/EmuELEC-GameProgressBackup.csproj
@@ -36,6 +36,12 @@
     <StartupObject>EmuELEC_GameProgressBackup.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FAndradeTI.Util.FileSystem, Version=1.0.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\FAndradeTI.Util.FileSystem.1.0.2\lib\net472\FAndradeTI.Util.FileSystem.dll</HintPath>
+    </Reference>
+    <Reference Include="FAndradeTI.Util.Network, Version=1.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\FAndradeTI.Util.Network.1.0.1\lib\net472\FAndradeTI.Util.Network.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -74,6 +80,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -89,16 +96,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Images\exit.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Resource\FandradeTecInfoUtils\FAndradeTecInfo.Utils.csproj">
-      <Project>{D27F1821-F7C8-4D31-BE57-8452279F0B4C}</Project>
-      <Name>FAndradeTecInfo.Utils</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Resource\FandradeTecInfoUtils\FAndradeTI.Util.Network\FAndradeTI.Util.Network.csproj">
-      <Project>{5B55922F-BF2C-49DB-A2F9-BA91A0218180}</Project>
-      <Name>FAndradeTI.Util.Network</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
